--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "body-parser": "^1.18.2"
+    "glob-exec": "^0.1.1"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "nodemon": "^1.17.4",
-    "prettier": "1.12.1",
+    "prettier": "1.13.0",
+    "prettier-eslint-cli": "^4.7.1",
     "prettierrc": "0.0.0-5"
   },
   "scripts": {
     "test": "node ./**/*.spec.js",
-    "prettier": "prettier",
-    "start": "nodemon src/app.js"
+    "prettier": "prettier --find-config-path --write '{src,__{tests,mocks}__}/**/*.js'",
+    "start": "nodemon src/app.js",
+    "eslint": "eslint ./**/*.js",
+    "format": "prettier-eslint --write 'src/**/*.js'",
+    "glob": "glob-exec --foreach './src/**/*.spec.js' -- 'node {{file}}' "
   },
   "author": "Ivana Fustar",
   "license": "ISC"
